<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="pl.damiandziura.milionerzy.activities.EndGameActivity">

    <TextView
        android:id="@+id/dummyview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/lblPrize"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_above="@+id/dummyview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="71dp"
        android:background="@drawable/question"
        android:gravity="center"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/Prize1"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        tools:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btExit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/question"
        android:onClick="onExitActivity"
        android:text="@string/ExitWithoutSave" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/question"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/EnterName"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/dummyview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/question"
        android:onClick="onSaveActivity"
        android:text="@string/Save"
        android:layout_above="@+id/btExit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

</android.widget.RelativeLayout>
